updates for  coauthros

--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -5,6 +5,7 @@
 
 \usepackage{array}
 \usepackage{amsmath}
+\usepackage{setspace}
 %\usepackage[backend=bibtex]{biblatex}
 \bibliographystyle{..//refs/styles/nature.bst}
 \setkeys{Gin}{width=0.8\textwidth}
@@ -77,7 +78,7 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 % Most comments say: emw8Oct2025: 
 
 % emw6Nov2025 -- I think we should be careful on going too hard on carbon, especially in the abstract.
-\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain why. Using rarely available plant-scale phenological measurements from a common garden  of 18 woody species, we found earlier leafout led to earlier budset and thus lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of budset and may help explain why apparently longer seasons do not increase growth.}
+\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain how. Using rarely available plant-level phenology from a common garden of 18 woody species, we found earlier leafout led to earlier growth cessation (budset) and lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of controls on budset and suggest why apparently longer seasons do not increase growth.}
 
 
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
@@ -91,10 +92,10 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 %This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity---if early leaf out results in earlier budset, as a whole plant are active for a proportionately large period of time where thermal conditions are less thermally optimal for photosynthesis. This study shows linking phenological growing seasons to carbon storage requires integrating existing ecosystem measures with phenological variation at multiple scales, and that progress will require more efforts to understand and model species-level shifts in phenology.
 
 % This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. 
-
+\clearpage
 %\section{Introduction}
-Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage, following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
-However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity, though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
+Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage (Fig: \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
+However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Fig: \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
 % CUTREFS: You only need one of {shanley2024, roe2021} and 1-2 of {Churkina2005,White1999,Keenan2014} ... I cut some. 
 % CUTREFS: camarero2022decoupled
 
@@ -111,9 +112,9 @@ The thermal growing season---a period of favorable meteorological conditions for
 
 
 % emw6Nov2025 -- we do not report correlations, we use a regression so we need to avoid talking about correlations, unless we want to annoy reviewers.
-Here, we use rarely available plant-scale data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
+Here, we use rarely available plant-level data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
 
-\section{Results \& Discussion} 
+%\section{Results \& Discussion} 
 \iffalse
 % emw8Oct2025: Stuff I changed/comments
 * I totally reorganized to put the exciting findings up front and then unpack them, mentioning the variance partitioning along the way (I think variance partitioning is confusing to many and so less exciting) 
@@ -124,25 +125,25 @@ Here, we use rarely available plant-scale data from three years of a multi-speci
 \fi
 
 % emw6Nov2025 -- we don't have inference at 2 decimal places, can you change throughout to 1 decimal place?
-Across three years and 18 co-occuring species from from four populations across a 4.5$\degree$, our common garden captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
+Across three years and 13 co-occurring species (Tab: \ref{listSp}) collected from four populations across a 4.5$\degree$ latitudinal gradient (Fig:\ref{fig:map}), our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}a,b). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:cool1}c,d), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
 
 % emw6Nov2025 -- Can you add a fig ref for 'This result was driven by an apparent relationship between leafout and budset at the individual level (FIG)'?
 Longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed; instead
-early calendar growing seasons led to lower (cooler) thermal growing seasons (Figure \ref{fig:thermcal}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). 
+early calendar growing seasons led to lower (cooler) thermal growing seasons (Fig: \ref{fig:cool1}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:vapar}c). 
 
 % emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
 % ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
-Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, likely because their earlier leafout still occurred in thermally favorable times of the season. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:8.22 $UI_{90}$[5.62,11.7], days for budset: 9.84 $UI_{90}$[7.01,13.52], days for season length: 14.54, $UI_{90}$[10.43,19.74l Figure \ref{fig:vapar}a-b).
+Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Fig: \ref{fig:cool1}-\ref{fig:vapar}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, likely because their earlier leafout still occurred in thermally favorable times of the season. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:8.12 $UI_{90}$[5.54,11.56], days for budset: 9.73 $UI_{90}$[6.99,13.57], days for season length: 14.45, $UI_{90}$[10.34,19.9).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
-These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were strongly species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
+These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life,michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
 % emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
 % emw6Nov2025 -- save words by not naming the sites
-Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$:10.62 days $UI_{90}$[4.83,21.22], Figure \ref{fig:vapar}), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$:0.61, $UI_{95}$[0.03,1.86], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:15.13 days $UI_{90}$[6.24,31.02], Figure \ref{fig:vapar}) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. We did find evidence of local adaptation ($\sigma_{population}$:2.35 days, $UI_{90}$[0.38,6.39], Figure \ref{fig:vapar}), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}b) and 6X and \Sexp{spVpop}X smaller than the variation due to year and species (respectively). 
+Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.65 days $UI_{90}$[4.88, 20.86], Fig: \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.57, $UI_{95}$[0.04, 1.77], Fig: \ref{fig:vapar}a). Yet our finding of up to 15 fays of variation across years in budset was surprising (\sigma_{year}$:15.02 days, $UI_{90}$[6.44, 30.84], Fig: \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. We did find evidence of local adaptation ($\sigma_{population}$: 2.34 days, $UI_{90}$[0.4, 6.13], Fig \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 6X and 4X smaller than the variation due to year and species (respectively). 
 
 % emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
-The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}, and with different implications for carbon gain \citep{Korner2023}.
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
 
 % Shortened for space
 \iffalse
@@ -164,7 +165,7 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
 Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}. Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
-Varying light availability over the early season combined with different plant strategies may alter this equation, and explain why some species leafout early during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
+Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially explaining why some species leafout during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
 
 % Shortened for space
 \iffalse
@@ -173,8 +174,10 @@ Varying light availability over the early season combined with different plant s
 Our results raise questions about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions \citep{AUGSPURGER2005}.
 \fi
 
-The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. Sampling across species of different leafout and growth strategies appears especially important as we found later-leafout species did not exhibit a strong trade-off. Whether this is consistent across other communities of species---and %some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
-other climates is an important question. Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
+The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always well studied in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding.  Sampling across species of different leafout and growth strategies appears especially important, alongside studies of how different communities and climates may shape the relationship between calendar and thermal growing seasons. 
+% Sampling across species of different leafout and growth strategies appears especially important, especially given that the earliest species showed the largest declines in thermal growing season with earlier leafout. Whether this finding is consistent across other communities of species---and other climates is an important question. 
+%some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
+Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
 
 % Our findings suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology.  
 
@@ -188,8 +191,8 @@ other climates is an important question. Understanding whether the thermal respo
 
 
 
-\section{Acknowledgements:}
-Thanks to Kea Woodruff and Lee Toomey for the help planting and caring for the Weld Hill Common Garden. Thanks to Meghan Blumstein for her thoughts and comments.
+%\section{Acknowledgements:}
+%Thanks to Kea Woodruff and Lee Toomey for the help planting and caring for the Weld Hill Common Garden. Thanks to Meghan Blumstein for her %thoughts and comments.
 
 \newpage
 \section{Figures} 
@@ -198,27 +201,31 @@ Thanks to Kea Woodruff and Lee Toomey for the help planting and caring for the W
 %cjc2024Sept25 - agreed, this is awesome!
 \begin{figure}[h!]
     \centering
- \includegraphics[width=.8\textwidth]{..//analyses/figures/primarygrowingseason_modplots.jpeg} 
-    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. Later leafout resulted in a shorter calendar growing season (median estimated effect: -0.44 days, $UI_{90}[-0.68,-0.21]$) (a) and this pattern was consistent across species in our study (b). In contrast, an increasing later leafout resulted in a longer thermal growing season (median estimates effect: 5.39 growing-degree days, $UI_{90}[2.15,8.52]$) (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in a), and c) represent the raw data (per individual tree per year).}
-    \label{fig:thermcal}
+ \includegraphics[width=.6\textwidth]{..//analyses/figures/finalfigure1.png} 
+    
+  \begin{singlespace}  
+    \caption{The relationship between leafout timing and growing season length differs between the calendar growing season and the thermal growing season. Panel (a) conceptually demonstrates the expected relationship between leafout timing, and both calendar and thermal growing season length under the expectation that longer growing seasons lead to increased carbon storage. Panel (b) conceptually demonstrates the expected relationship between leafout timing, and both calendar and thermal growing season length under the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.45 days, $UI_{90}[-0.68,-0.21]$) (c) and this pattern was consistent across species in our study (d). In contrast, an increasing later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.12,8.44]$) (d) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in c) represent the raw data (per individual tree per year).}
+    \end{singlespace}
+    \label{fig:cool1}
 \end{figure}
 
 \newpage
 
 \begin{figure}[h!]
     \centering
- \includegraphics[width=.7\textwidth]{..//analyses/figures/var_parts.jpeg}
-    \caption{Difference in leafout, budset and growing season length (in days) partitioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 90\% uncertainty intervals.}
+ \includegraphics[width=.9\textwidth]{..//analyses/figures/finalfigure2.png}
+    \caption{Difference in leafout and budset  (in days) partitioned populations (a) and years (b). Point represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) demonstrates how thermal conditions can vary across the calendar growing season and can generate a complex relationship between the calendar and thermal growing seasons by depicting the relationship between indivuals of two shurb species with similar life-history strategies. Despite the fact the the early individual (light green line) of \emph{Aronia melanocarpa} leafs out 28 days before it's later con-generic (dark green line) and only sets bud 18 days before it (i.e., it has a 10 day longer calendar growing season) it's thermal growing season is shorter because most of its growth advantage takes place in the unfavorable early spring. In contrast for \emph{Myrica gale} where both the early (light green) and later (dark green) individual leaf out later in the spring, the 15 day head start and 4 day earlier finish of the earlier individual (11 day longer calendar growing season) results in a longer thermal growing season.}
+
     \label{fig:vapar}
 \end{figure}
 
  \newpage
- \begin{figure}[h!]
-    \centering
- \includegraphics[width=.8\textwidth]{..//analyses/figures/aronia_examp.jpeg}
-    \caption{Thermal conditions vary across the calendar growing season, which can generate a complex relationship between the calendar and thermal growing seasons. Panel a) depicts the daily heat sums at the Weld Hill Research Building in 2019 and the calendar growth season of early and late leafing individuals of \emph{Aronia melanocarpa} (green bars) and \emph{Myrica gale} (blue bars). Despite the fact the the early individual of \emph{A. melanocarpa} leafs out 24 days before it's later con-generic and only sets bud 13 days before it (i.e., it has a 14 day longer calendar growing season) it's thermal growing season is shorter (panel b) because most of its growth advantage (explain this better) takes place in the unfavorable early spring. In contrast for \emph{M. gale} where both the early and late individual leaf out later in the spring, the 20 day head start and 5 day earlier finish of the earlier individual (15 day longer calendar growing season) results in a longer thermal growing season for it as well (panel c)}.
-    \label{fig:concept}
-\end{figure}
+ %\begin{figure}[h!]
+%    \centering
+% \includegraphics[width=.8\textwidth]{..//analyses/figures/aronia_examp.jpeg}
+%    \caption{Thermal conditions vary across the calendar growing season, which can generate a complex relationship between the calendar and thermal growing seasons. Panel a) depicts the daily heat sums at the Weld Hill Research Building in 2019 and the calendar growth season of early and late leafing individuals of \emph{Aronia melanocarpa} (green bars) and \emph{Myrica gale} (blue bars). Despite the fact the the early individual of \emph{A. melanocarpa} leafs out 24 days before it's later con-generic and only sets bud 13 days before it (i.e., it has a 14 day longer calendar growing season) it's thermal growing season is shorter (panel b) because most of its growth advantage (explain this better) takes place in the unfavorable early spring. In contrast for \emph{M. gale} where both the early and late individual leaf out later in the spring, the 20 day head start and 5 day earlier finish of the earlier individual (15 day longer calendar growing season) results in a longer thermal growing season for it as well (panel c)}.
+%    \label{fig:concept}
+%\end{figure}
 
 \clearpage
 
