--- a/docs/supple.Rnw
+++ b/docs/supple.Rnw
@@ -7,6 +7,7 @@
 \usepackage{array}
 \usepackage{amsmath}
 %\usepackage[backend=bibtex]{biblatex}
+\bibliographystyle{..//refs/styles/nature.bst}
 \setkeys{Gin}{width=0.8\textwidth}
 %\setlength{\captionmargin}{30pt}
 \setlength{\abovecaptionskip}{10pt}
@@ -32,42 +33,11 @@
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 
-%\section{Tables}
-%\begin{table}[ht]
-%\centering
-
-%\label{listSp}
-%\begin{tabular}{lrr}
-%  \hline
-%Species & functional group & n \\ 
-%  \hline
-%  \emph{Acer pensylvanicum} & tree  & 2 \\ 
-%  *\emph{Acer spicatum} & tree & \emph{NA}  \\ 
-%   \emph{Alnus incana} & shrub & 31 \\ 
- %  \emph{Amelanchier canadensis} &  shrub & 6  \\ 
-%  \emph{Aronia melanocarpa} & shrub & 12 \\ 
-%  \emph{Betula alleghaniensis} &  tree & 24\\ 
-%  \emph{Betula papyrifera} &   tree & 13 \\ 
-%  \emph{Betula populifolia} &  tree & 24\\ 
-%  \emph{Diervilla lonicera} &  shrub  & 16 \\ 
-%  \emph{Myrica gale} &  shrub & 15\\ 
-%  *\emph{Quercus alba} &  tree & \emph{NA}\\ 
-%  *\emph{Quercus rubra} &  tree & \emph{NA}\\ 
-%  \emph{Sambucus racemosa} &  shrub & 11\\ 
-%  \emph{Sorbus americana} &  shrub & 5\\
-%  \emph{Spiraea alba} &  shrub & 19\\ 
-%  \emph{Spiraea tomentosa} &   shrub & 21 \\ 
-% * \emph{Vaccinium myrtilloides} &  shrub & \emph{NA}\\ 
- % \emph{Viburnum cassinoides} &  shrub & 25 \\ 
- % \end{tabular}
- % \caption{Common garden focal species. In 2017, olantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth. * indicates species that were planted but not included in analyses due to low survivorship.} 
-%\end{table}
-
 \section{Methods} 
 \subsubsection{The Common Garden}
 % emwJuly22: do you want to cite Baskin^2 for 'germination protocols.' 
 In 2014-2015, we collected seeds %of 18 species woody plants from multiple parent plants at
-from four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish thexCommon garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
+from four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 71.40$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 71.15$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish thexCommon garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
 
 Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides} \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses included an average of 14 individuals per species. Our statistical analyses account for the unbalanced design that is frequently occurs in common gardens and other provenance trials (CITE).
 
@@ -83,11 +53,56 @@ We define the thermal growing season as the cumulative growing degree day heat s
 
 All models were fit in the R package ``brms" \citep{Burkner2018} on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. We performed all analyses in R version 4.1.2 \citep{R2021}.
 
+
+\bibliography{..//refs/wildhell.bib}
+
+
+\section{Tables}
+\begin{table}[ht]
+\centering
+
+\label{listSp}
+\begin{tabular}{lrr}
+  \hline
+Species & functional group & n \\ 
+  \hline
+  *\emph{Acer pensylvanicum} & tree  &  \emph{NA}\\ 
+  *\emph{Acer spicatum} & tree & \emph{NA}  \\ 
+   \emph{Alnus incana} & shrub & 31 \\ 
+   \emph{Amelanchier canadensis} &  shrub & 6  \\ 
+ \emph{Aronia melanocarpa} & shrub & 12 \\ 
+  \emph{Betula alleghaniensis} &  tree & 24\\ 
+  \emph{Betula papyrifera} &   tree & 13 \\ 
+  \emph{Betula populifolia} &  tree & 24\\ 
+  \emph{Diervilla lonicera} &  shrub  & 16 \\ 
+  \emph{Myrica gale} &  shrub & 15\\ 
+  *\emph{Quercus alba} &  tree & \emph{NA}\\ 
+  *\emph{Quercus rubra} &  tree & \emph{NA}\\ 
+  \emph{Sambucus racemosa} &  shrub & 11\\ 
+  \emph{Sorbus americana} &  shrub & 5\\
+  \emph{Spiraea alba} &  shrub & 19\\ 
+  \emph{Spiraea tomentosa} &   shrub & 21 \\ 
+ * \emph{Vaccinium myrtilloides} &  shrub & \emph{NA}\\ 
+ \emph{Viburnum cassinoides} &  shrub & 25 \\ 
+  \end{tabular}
+  \caption{Common garden focal species. In 2017, plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth. * indicates species that were planted but not included in analyses due to low survivorship.} 
+\end{table}
+
+
 \section{Figures}
  \begin{figure}[h!]
+
     \centering
- \includegraphics[width=.8\textwidth]{..//analyses/figures/full_var_parts.jpeg}
-    \caption{Difference in leafout, leaf coloration and growing season length partitioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 90\% uncertainty intervals.}
+ \includegraphics[width=.8\textwidth]{..//analyses/figures/maps.jpeg}
+    \caption{A map of the four site sampled in this study}
+    \label{fig:map}
+\end{figure}
+
+
+ \begin{figure}[h!]
+    \centering
+ \includegraphics[width=.8\textwidth]{..//analyses/figures/sup2.pdf}
+    \caption{Difference in leafout, leaf coloration and growing season length partitioned between populations (a) and years (b). Point represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals.}
     \label{fig:alta}
 \end{figure}
 
@@ -103,7 +118,7 @@ All models were fit in the R package ``brms" \citep{Burkner2018} on 4 chains wit
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/fullgrowingseason_modplots.jpeg} 
-    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied  across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The trend lines represent the median effect of leafout timing on growing season length and shaded bars the 90\% uncertaintly interval. Points in a), and c) represent the raw data.}
+    \caption{The relationship between the day of leafout and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The trend lines represent the median effect of leafout timing on growing season length and shaded bars the 90\% uncertaintly interval. Points in a), and c) represent the raw data.}
     \label{fig:leafrel}
 \end{figure}
 
